@@ -22,18 +22,19 @@ DOMAIN_INVALID = 34
 DOMAIN_TOO_LONG = 35
 FOUND_DOTS_IN_PATH = 36
 INVALID_ADDRESS = 37
-INVALID_OPTION = 38
-INVALID_SECTION = 39
-LOCALPART_INVALID = 40
-LOCALPART_TOO_LONG = 41
-MAILDIR_PERM_MISMATCH = 42
-MAILLOCATION_INIT = 43
-NOT_EXECUTABLE = 44
-NO_SUCH_ACCOUNT = 45
-NO_SUCH_ALIAS = 46
-NO_SUCH_BINARY = 47
-NO_SUCH_DIRECTORY = 48
-NO_SUCH_DOMAIN = 49
-TRANSPORT_INIT = 50
-UNKNOWN_MAILLOCATION_ID = 51
-UNKNOWN_TRANSPORT_ID = 52
+INVALID_AGUMENT = 38
+INVALID_OPTION = 39
+INVALID_SECTION = 40
+LOCALPART_INVALID = 41
+LOCALPART_TOO_LONG = 42
+MAILDIR_PERM_MISMATCH = 43
+MAILLOCATION_INIT = 44
+NOT_EXECUTABLE = 45
+NO_SUCH_ACCOUNT = 46
+NO_SUCH_ALIAS = 47
+NO_SUCH_BINARY = 48
+NO_SUCH_DIRECTORY = 49
+NO_SUCH_DOMAIN = 50
+TRANSPORT_INIT = 51
+UNKNOWN_MAILLOCATION_ID = 52
+UNKNOWN_TRANSPORT_ID = 53
